# galaksio

./: .gitignore  Dockerfile  README.md  VERSION  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
client/src/: index.html  install.html
client/src/app/: api.service.js  app.js  compatibility-report-controller.js  compatibility-report.html  paired-reads-controller.js  paired-reads-service.js  paired-reads.html
client/src/app/home/: home.tpl.html
client/src/app/users/: user-session-controller.js  user-session-dir.js  user-sign-in.tpl.html
client/src/app/workflows/: workflow-detail.tpl.html  workflow-list-controller.js  workflow-list.tpl.html  workflow-run.tpl.html
client/src/css/: animations.css  components.css  dark-mode.css  main.css  responsive.css
client/src/lib/: angular-scroll-spy.min.js  angular-scrollspy.min.js
docker/: Dockerfile  README.md  apache.conf  startup.sh
docs/: 1_3_install.md  index.md
docs/api/: swagger.yaml
docs/user-guide/: paired-reads-guide.md
galaksio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: launch_server.py  run.sh  server.py  server.wsgi
server/resources/: example_serverconf.cfg  galaxy_settings.py
server/servlets/: AuthHandler.py  CacheManager.py  ErrorHandler.py  FileUploadHandler.py  GalaxyAPI.py  GalaxyAPIVerifier.py  PairedReadsHandler.py  RateLimiter.py  SecurityManager.py  WorkflowTracker.py
tests/: test_galaxy_compatibility.py  test_paired_reads_handler.py
