[flake8]
ignore = E501
import-order-style = smarkets

[metadata]
name = galaksio
version = 0.4.0
description = An easy-to-use way for running Galaxy workflows
long_description = file: README.md
long_description_content_type = text/markdown
author = Tomas Klingström, Rafael Hernández de Diego
author_email = tomas.klingstrom@slu.se
url = https://github.com/SGBC/galaksio
project_urls =
    Bug Tracker = https://github.com/SGBC/galaksio/issues
    Documentation = https://galaksio.readthedocs.io/
license = GPL-3.0
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
python_requires = >=3.9
packages = find:
install_requires =
    bioblend>=1.6.0
    flask>=3.0.0
    requests>=2.31.0
    fpdf>=1.7.2
    fpdf2>=2.7.6
    python-dateutil>=2.8.2

[options.entry_points]
console_scripts =
    galaksio = server.launch_server:main

[options.packages.find]
exclude =
    tests*
